# rusty-recordstore-api

./: .gitignore  Cargo.toml  Makefile  README.md
.github/actions-rs/: grcov.yml
.github/workflows/: ci.yml  cov.yml
src/: main.rs
src/handlers/: mod.rs
src/models/: inmemdb.rs  mod.rs
src/routes/: mod.rs
tests/: int1.rs
